#25565 No longer do we need MaxPermSize since we are now Java 8